--- a/BDRDExce/appsettings.json
+++ b/BDRDExce/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DB": "User Id=postgres;Password=U6ue4cAMEZJZz0V8;Server=db.ayvracqfbywawwuslrmo.supabase.co;Port=5432;Database=postgres;"
+    "DB": "User Id=postgres.ayvracqfbywawwuslrmo;Password=U6ue4cAMEZJZz0V8;Server=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;"
   }
 }
