--- a/BDRDExce/BDRDExce.csproj
+++ b/BDRDExce/BDRDExce.csproj
@@ -14,6 +14,8 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.2" />
     </ItemGroup>
 
 </Project>
