--- a/BDRDExce/appsettings.json
+++ b/BDRDExce/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DB": "User Id=postgres.ayvracqfbywawwuslrmo;Password=U6ue4cAMEZJZz0V8;Server=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;"
+  },
+  "Jwt": {
+    "Key": "YourVerySecretKeyMustBe32CharactersLong",
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience",
+    "ExpireMinutes": 60
   }
 }
