--- a/appsettings.json
+++ b/appsettings.json
@@ -14,5 +14,12 @@
     "Issuer": "YourIssuer",
     "Audience": "YourAudience",
     "ExpireMinutes": 60
+  },
+  "KeyAes": "@F*P꧁༺ℳT★彡S9CC7df0d๖༻꧂ᴾᴿᴼシ",
+  "MailSetting":{
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Password": "cxol xmmm joqx uoxc",
+    "From": "nguyenhuunguyen682000@gmail.com"
   }
 }
