--- a/BDRDExce.csproj
+++ b/BDRDExce.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.4" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.0.2" />
+        <PackageReference Include="MailKit" Version="4.7.0" />
     </ItemGroup>
 
 </Project>
