--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DB": "User Id=postgres.ayvracqfbywawwuslrmo;Password=U6ue4cAMEZJZz0V8;Server=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;"
+    //"DB": "User Id=postgres.ayvracqfbywawwuslrmo;Password=U6ue4cAMEZJZz0V8;Server=aws-0-ap-southeast-1.pooler.supabase.com;Port=5432;Database=postgres;"
+    "DB": "User Id=postgres;Password=nguyennh;Server=localhost;Port=2345;Database=postgres;"
   },
   "Jwt": {
     "Key": "YourVerySecretKeyMustBe32CharactersLong",
