--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DB": ""
+    "DB": "User Id=postgres;Password=nguyennh;Server=localhost;Port=2345;Database=postgres"
   },
   "Jwt": {
     "Key": "YourVerySecretKeyMustBe32CharactersLong",
