--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,8 @@
     "Key": "YourVerySecretKeyMustBe32CharactersLong",
     "Issuer": "YourIssuer",
     "Audience": "YourAudience",
-    "ExpireMinutes": 60
+    "ExpireMinutes": 60,
+    "RefreshTokenValidityInDays": 7
   },
   "KeyAes": "@F*P꧁༺ℳT★彡S9CC7df0d๖༻꧂ᴾᴿᴼシ",
   "MailSetting":{
