--- a/appsettings.json
+++ b/appsettings.json
@@ -22,5 +22,7 @@
     "Port": 587,
     "Password": "cxol xmmm joqx uoxc",
     "From": "nguyenhuunguyen682000@gmail.com"
-  }
+  },
+  "EmailConfirmationLink": "http://google.com",
+  "ResetPasswordCallbackLink": "http://google.com"
 }
